# fx-royal-road-monitor

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/commands/: build-corpus-from-history.md  royal-road-check.md  royal-road-dashboard.md  royal-road-flag-dissent.md  royal-road-monthly-report.md  royal-road-update-outcomes.md
.github/workflows/: monitor.yml  publish_mvp1_preview.yml  safety_lint.yml
data/ohlc/: experiment_7day.json  full_archive.json
data/pending_judgements/: 4b162d98-ed60-4ab0-ad5b-dfbc82b2217e.prompt.md  4d15fbe2-8fd9-4e08-a58a-50555f6be607.prompt.md  6945d4d5-8bf5-42ce-9cdb-cb81a1a235b4.prompt.md  88694f9d-66f2-4547-8bf1-edf29652a664.prompt.md  a652607b-6139-4ce9-9112-91f68c50ca97.prompt.md  e57ae296-ebc7-47b4-ac8b-05ae85e15d84.prompt.md
docs/: AI_REVIEW_POLICY.md  DRAFT_TO_RICH_PROMOTION_PLAN.md  MVP1_OBSERVATION_PIPELINE_FREEZE_REPORT.md  NOTIFICATION_POLICY.md  ROYAL_ROAD_KNOWLEDGE_PACK_v1.md  RUNBOOK_SCHEDULED_DRAFT_REVIEW.md  SPEC.md  doctrine_v7.md
docs/live_dashboard/: index.html
docs/mvp1_current_preview/: claude_decision_screen_spec.json  dashboard.html  decision_screen.html  decision_screen_repair_log.json  decision_screen_spec_compare.json  diagnostics.json  index.html  openai_decision_screen_spec.json  review_log.jsonl  review_report.json  review_report.md  visual_review.json
src/fx_monitor/: __init__.py
tests/: conftest.py  test_ai_authored_decision_screen_renderer.py  test_ai_authored_preflight.py  test_ai_schema.py  test_build_preview_modes.py  test_chart_card_renderer.py  test_claude_reviewer.py  test_compare.py  test_csv_feed.py  test_dashboard.py  test_decision_screen_prompt_builder.py  test_decision_screen_spec_compare.py  test_decision_screen_spec_repair.py  test_decision_screen_spec_schema.py  test_diagnostics.py  test_discord_notifier.py  test_draft_chart_renderer.py  test_draft_payload.py  test_feed_selector.py  test_font_resolver.py  test_knowledge_pack.py  test_line_notifier.py  test_market_models.py  test_mvp1_freeze_static.py  test_notification_decision.py  test_openai_reviewer.py  test_pivots.py  test_preview_static.py  test_promotion_plan_static.py  test_prompt_builder.py  test_publish_mvp1_preview_workflow.py  test_review_log.py  test_review_report.py  test_rich_draft.py  test_rich_draft_compare.py  test_rough_levels.py  test_royal_road_decision_screen.py  test_royal_road_payload_adapter.py  test_rule_engine_royal_road_payload.py  test_run_once_feed_mode.py  (+5 more)
tests/ai/: test_prompt_builder_v2.py
tests/corpus/: test_entry_validator.py  test_outcome.py  test_store.py
tests/fixtures/: diagnostics_sample.json  (+9 more)
(+243 files in other folders)
