[project]
name = "fx-royal-road-monitor"
version = "0.1.0"
description = "5分監視 + ルール判定 + OpenAI/Claude 二重AIレビュー + 比較 + 通知"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.40"]
api = ["openai>=1.40", "anthropic>=0.40"]
chart = ["matplotlib>=3.8", "pandas>=2.2", "numpy>=1.26"]
notify = ["httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "matplotlib>=3.8",
    "httpx>=0.27",
]

[project.scripts]
fx-monitor-once = "fx_monitor.app.run_once:main"
fx-monitor-watch = "fx_monitor.app.run_watch:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
