[project]
name = "fx-royal-road-monitor"
version = "0.2.0"
description = "観測専用 5分FX 王道判定 (AIが判定 / コードは数値事実 / 過去データが教師)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
]

[project.optional-dependencies]
chart = ["matplotlib>=3.8", "pandas>=2.2"]
market = ["yfinance>=0.2.40", "pandas>=2.2"]
clip = ["open_clip_torch>=3.0", "torch>=2.0", "Pillow>=10.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "matplotlib>=3.8",
    "pandas>=2.2",
]

[project.scripts]
fx-monitor-check-prepare = "fx_monitor.tools.check_prepare:main"
fx-monitor-check-finalise = "fx_monitor.tools.check_finalise:main"
fx-monitor-update-outcomes = "fx_monitor.tools.update_outcomes:main"
fx-monitor-flag-dissent = "fx_monitor.tools.flag_dissent:main"
fx-monitor-monthly-report = "fx_monitor.tools.monthly_report:main"
fx-monitor-dashboard = "fx_monitor.tools.dashboard:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fx_monitor.ai" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
